--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,7 @@ dependencies {
 
     //Material
     implementation 'com.google.android.material:material:1.2.0-alpha06'
+
+    //Gson
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
